--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tracks your stocks",
   "main": "app.js",
   "dependencies": {
+    "mongodb": "^2.0.39",
     "monument": "^1.5.0"
   },
   "devDependencies": {
@@ -12,7 +13,7 @@
     "gulp-mocha": "^2.0.0"
   },
   "scripts": {
-  	"start": "node app.js",
+    "start": "node app.js",
     "test": "gulp test"
   },
   "author": "",
